# kaspa-crawler

./: .dockerignore  .gitignore  Dockerfile  Pipfile  Procfile  docker-compose.yml  fly.toml  geolocation_db.py  kaspa_crawler.py  main.py  nodes_db.py  pyproject.toml  requirements.txt
data/: nodes.json
